Fixed import button image by adding @{} around image file path